Implement core features for FlashPay project: User, Order, Settlement services, Docker integration, CI/CD pipeline, and performance testing setup